New VS Code doesn't like "&" on task names

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -22,7 +22,7 @@
                     "ignoreFailures": true
                 }
             ],
-            "preLaunchTask": "Build & copy game",
+            "preLaunchTask": "Build n copy game",
             "miDebuggerPath": "/usr/bin/gdb"
         }
     ]
