--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -4,7 +4,7 @@
     "version": "2.0.0",
     "tasks": [
         {
-            "label": "Build & copy game",
+            "label": "Build n copy game",
             "type": "shell",
             "command": "make && cp -r release/* /usr/share/games/quake2/"
         }
